@@ -29,51 +29,61 @@ DISTFILES =	.gitignore \
 	config/act/zir010.xml \
 	config/act/zrp110.xml \
 	config/act/zrw103.xml \
-	config/aeotec/alms.xml \
-	config/aeotec/doorbell_gen5.xml \
-	config/aeotec/doorwindow.xml \
-	config/aeotec/drycontactsensor.xml \
-	config/aeotec/dsd31.xml \
+	config/aeotec/dsa03202.xml \
+	config/aeotec/dsa22.xml \
+	config/aeotec/dsa38.xml \
+	config/aeotec/dsb04100.xml \
+	config/aeotec/dsb05.xml \
+	config/aeotec/dsb09104.xml \
+	config/aeotec/dsb28.xml \
+	config/aeotec/dsb29.xml \
+	config/aeotec/dsb45.xml \
+	config/aeotec/dsb54.xml \
+	config/aeotec/dsc06106.xml \
+	config/aeotec/dsc08101.xml \
+	config/aeotec/dsc10.xml \
+	config/aeotec/dsc11.xml \
+	config/aeotec/dsc12104.xml \
+	config/aeotec/dsc13104.xml \
+	config/aeotec/dsc14104.xml \
+	config/aeotec/dsc18103.xml \
+	config/aeotec/dsc19103.xml \
+	config/aeotec/dsc24.xml \
+	config/aeotec/dsc26103.xml \
+	config/aeotec/dsc27103.xml \
+	config/aeotec/dsc35103.xml \
 	config/aeotec/dsd37.xml \
-	config/aeotec/dws6.xml \
-	config/aeotec/hdss_gen5.xml \
-	config/aeotec/hem.xml \
-	config/aeotec/hemg2.xml \
-	config/aeotec/keyfob.xml \
-	config/aeotec/keyfob2.xml \
-	config/aeotec/ledbulb.xml \
-	config/aeotec/minimote.xml \
-	config/aeotec/mmc.xml \
-	config/aeotec/msesv2.xml \
-	config/aeotec/multisensor6.xml \
-	config/aeotec/multisensor_gen5.xml \
-	config/aeotec/panicbtn.xml \
-	config/aeotec/recessed_doorsensor.xml \
-	config/aeotec/recessed_doorsensor_gen5.xml \
-	config/aeotec/sd6.xml \
-	config/aeotec/sei.xml \
-	config/aeotec/sei2.xml \
-	config/aeotec/ses.xml \
-	config/aeotec/ses2.xml \
-	config/aeotec/ses2a.xml \
-	config/aeotec/ss6.xml \
-	config/aeotec/watersensor.xml \
-	config/aeotec/zstickgen5.xml \
-	config/aeotec/zw062_garage_door_controller.xml \
-	config/aeotec/zw112_doorwindow6.xml \
-	config/aeotec/zw120_doorwindow.xml \
+	config/aeotec/zw056.xml \
+	config/aeotec/zw062.xml \
+	config/aeotec/zw074.xml \
+	config/aeotec/zw075.xml \
+	config/aeotec/zw078.xml \
+	config/aeotec/zw079.xml \
+	config/aeotec/zw080.xml \
+	config/aeotec/zw088.xml \
+	config/aeotec/zw089.xml \
+	config/aeotec/zw090.xml \
+	config/aeotec/zw095.xml \
+	config/aeotec/zw096.xml \
+	config/aeotec/zw098.xml \
+	config/aeotec/zw099.xml \
+	config/aeotec/zw100.xml \
+	config/aeotec/zw112.xml \
+	config/aeotec/zw120.xml \
 	config/assa_abloy/RealLivingCapTouch.xml \
 	config/cooper/RF9505-T.xml \
 	config/cooper/RF9540-N.xml \
 	config/danfoss/living.xml \
-	config/danfoss/rs.xml \
+	config/danfoss/rsroom.xml \
 	config/danfoss/z.xml \
 	config/device_classes.xml \
 	config/device_classes.xsd \
 	config/device_configuration.xsd \
+	config/devolo/mt02648.xml \
 	config/dlink/dch-z110.xml \
 	config/dlink/dch-z120.xml \
 	config/dlink/dch-z510.xml \
+	config/domitech/zb22uk.xml \
 	config/domitech/ze27eu.xml \
 	config/dragontech/wd-100.xml \
 	config/duwi/ZWES1000.xml \
@@ -94,6 +104,7 @@ DISTFILES =	.gitignore \
 	config/everspring/an179.xml \
 	config/everspring/an180.xml \
 	config/everspring/an181.xml \
+	config/everspring/hac01.xml \
 	config/everspring/hsp02.xml \
 	config/everspring/se812.xml \
 	config/everspring/sf812.xml \
@@ -114,6 +125,7 @@ DISTFILES =	.gitignore \
 	config/fibaro/fgd211.xml \
 	config/fibaro/fgd212.xml \
 	config/fibaro/fgfs101.xml \
+	config/fibaro/fggc001.xml \
 	config/fibaro/fgk001.xml \
 	config/fibaro/fgms.xml \
 	config/fibaro/fgr221.xml \
@@ -151,6 +163,7 @@ DISTFILES =	.gitignore \
 	config/horstmann/srt323.xml \
 	config/intermatic/ca8900.xml \
 	config/iris/rangeextender.xml \
+	config/kwikset/smartcode.xml \
 	config/leviton/rzi10.xml \
 	config/leviton/vrcpg.xml \
 	config/leviton/vrf01.xml \
@@ -209,12 +222,16 @@ DISTFILES =	.gitignore \
 	config/qubino/ZMNHDA2.xml \
 	config/qubino/ZMNHDDx.xml \
 	config/qubino/ZMNHIA2.xml \
+	config/qubino/ZMNHIDx.xml \
 	config/qubino/ZMNHJA2.xml \
 	config/qubino/ZMNHJD1.xml \
 	config/qubino/ZMNHLAx.xml \
 	config/qubino/ZMNHNDx.xml \
+	config/qubino/ZMNHODx.xml \
 	config/qubino/ZMNHSDx.xml \
 	config/qubino/ZMNHTAx.xml \
+	config/qubino/ZMNHTDx.xml \
+	config/qubino/ZMNHUD1.xml \
 	config/rcs/em52-zw.xml \
 	config/rcs/pm12-zw.xml \
 	config/rcs/therm0005.xml \
@@ -237,6 +254,7 @@ DISTFILES =	.gitignore \
 	config/vision/zd2201.xml \
 	config/vision/zg8101.xml \
 	config/vision/zm1601eu.xml \
+	config/vision/zm1601eu5.xml \
 	config/vision/zm1602eu.xml \
 	config/vision/zm1602eu5.xml \
 	config/vision/zp3102.xml \
@@ -264,6 +282,7 @@ DISTFILES =	.gitignore \
 	config/zwave.me/ZME_WCD2.xml \
 	config/zwave.me/iTemp.xml \
 	config/zwave.me/kfob.xml \
+	config/zwave.me/popp_kfob-c.xml \
 	config/zwave.me/zweather.xml \
 	config/zwcfg.xsd \
 	config/zwscene.xsd \
